tests/baselines/reference/for-of15.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of15.ts(11,11): error TS2490: The type returned by the 'next()' method of an iterator must have a 'value' property.


==== tests/cases/conformance/es6/for-ofStatements/for-of15.ts (1 errors) ====
    class StringIterator {
        next() {
            return "";
        }
        [Symbol.iterator]() {
            return this;
        }
    }
    
    var v: string;
    for (v of new StringIterator) { } // Should fail
              ~~~~~~~~~~~~~~~~~~
!!! error TS2490: The type returned by the 'next()' method of an iterator must have a 'value' property.